removed log lines
fixed login screen constraints

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -18,40 +18,46 @@
             android:id="@+id/imageView"
             android:layout_width="253dp"
             android:layout_height="286dp"
-            android:layout_marginTop="100dp"
             android:src="@drawable/logo_ipcd"
+            app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="spread"
             tools:ignore="MissingConstraints" />
 
         <EditText
             android:id="@+id/editTextEmail"
-            android:layout_width="400dp"
-            android:layout_height="43dp"
-            android:layout_marginTop="70dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:hint="@string/email"
+            android:layout_marginHorizontal="24dp"
             android:inputType="textEmailAddress"
+            android:onTextChanged="@{viewModel.usernameTextWatcher::onTextChanged}"
+            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
-            android:onTextChanged="@{viewModel.usernameTextWatcher::onTextChanged}"
             tools:ignore="MissingConstraints" />
 
         <EditText
             android:id="@+id/editTextPassword"
-            android:layout_width="400dp"
-            android:layout_height="45dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/editTextEmail"
-            android:layout_marginTop="40dp"
             android:autofillHints="creditCardSecurityCode"
             android:hint="@string/password"
             android:inputType="textPassword"
+            android:layout_marginHorizontal="24dp"
+            android:onTextChanged="@{viewModel.passwordTextWatcher::onTextChanged}"
+            app:layout_constraintBottom_toTopOf="@+id/checkBoxShowPassword"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
             app:showPassword="@{viewModel.showPassword}"
-            android:onTextChanged="@{viewModel.passwordTextWatcher::onTextChanged}"
             tools:ignore="MissingConstraints" />
 
         <Button
@@ -59,23 +65,26 @@
             android:layout_width="250dp"
             android:layout_height="52dp"
             android:layout_below="@id/editTextPassword"
-            android:layout_marginTop="80dp"
             android:onClick="@{() -> viewModel.login()}"
             android:text="@string/login"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.499"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
+            app:layout_constraintTop_toBottomOf="@+id/checkBoxShowPassword"
             tools:ignore="MissingConstraints" />
 
         <CheckBox
             android:id="@+id/checkBoxShowPassword"
-            android:layout_width="400dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:onCheckedChanged="@{viewModel.showPasswordCheckedListener}"
             android:text="Show Password"
+            android:layout_marginHorizontal="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
