fixed wrong calculate and clean UI

--- a/app/src/main/res/layout/item_answer_statistics.xml
+++ b/app/src/main/res/layout/item_answer_statistics.xml
@@ -26,7 +26,17 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{item.statisticsCount}"
+              />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="* Percentages (%)"
+                />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
