--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -8,6 +8,10 @@
         <variable
             name="viewModel"
             type="com.example.ipcd.app.statistics.StatisticsViewModel" />
+        <variable
+            name="item"
+            type="com.example.ipcd.data.AnswerStatistics" />
+
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -85,6 +89,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="64dp"
                 android:layout_marginVertical="8dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:onClick="@{() -> viewModel.getData()}"
                 android:text="@string/action_show_data"
                 app:layout_constraintBottom_toTopOf="@+id/recyclerView"
@@ -92,6 +98,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
